# TechWorkshop-L300-AI-Apps-and-agents

./: SUPPORT.md
.github/workflows/: cora_agent_update.yml  github_workflows_deploy-container-app.yml
docs/: container_app_rbac_setup.md
src/: chat_app.py  pyproject.toml
src/a2a/agent/: product_management_agent.py
src/app/agents/: cartManagerAgent_initializer.py  customerLoyaltyAgent_initializer.py  interiorDesignAgent_initializer.py  inventoryAgent_initializer.py  shopperAgent_initializer.py
src/app/tools/: singleAgentExample.py
src/infra/: DeployAzureResources.bicep
src/prompts/: CustomerLoyaltyAgentPrompt.txt  InventoryAgentPrompt.txt
